--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,16 @@
 @import "tailwindcss";
+
+:root {
+    font-size: 80%;
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+
+@media (max-width: 640px) {
+    :root {
+        font-size: 85%;
+    }
+}
